examples/type_system/failing/142_match_bool_missing_true.flx
// E015: Bool match missing true branch.
fn main() -> Unit {
    let b = false
    let _x = match b {
        false -> 0
    }
}
